Fixed images - reverted to working stock images temporarily

--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <img src="https://drive.google.com/uc?export=view&id=1yliX6QayaaMOSmEVfi9jQytrA2OcuH1e" alt="MAAC - Maya Academy of Advanced Creativity">
+                    <img src="https://client-uploads.nyc3.digitaloceanspaces.com/images/cadec5a4-641a-4de5-8c47-9e86383693df/2025-11-19T11-27-13-623Z-8e9bf90a.jpg" alt="MAAC - Maya Academy of Advanced Creativity">
                 </div>
                 <div class="trust-badge">⭐ 500+ Students Placed | Rated 4.9</div>
             </div>
@@ -711,7 +711,7 @@
                     <a href="#form" class="cta-button">Book Your FREE Career Counselling Session →</a>
                 </div>
                 <div class="hero-image">
-                    <img src="https://drive.google.com/uc?export=view&id=1WG13POSSdW6fxnm8N0BHAKYVFriFFyPq" alt="Student working on animation">
+                    <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?w=600&h=400&fit=crop" alt="Student working on animation">
                 </div>
             </div>
         </div>
@@ -723,11 +723,11 @@
             <h2>Our Students Work At Top Companies</h2>
             
             <div class="company-logos">
-                <img src="https://drive.google.com/uc?export=view&id=1wv4CbznrnLZL1V0wTpnAwEhSCtg8sgWS" alt="Company 1">
-                <img src="https://drive.google.com/uc?export=view&id=1qG8qd66UjzR-8r90Vdjo-oR9toyX1W8D" alt="Company 2">
-                <img src="https://drive.google.com/uc?export=view&id=1Yk1IrQ1SuOyRe_G1ozr-AoJE5ucViLUr" alt="Company 3">
-                <img src="https://drive.google.com/uc?export=view&id=1jmUqiK3ckzs82j0Sv_gjDRvr0rrCFfdr" alt="Company 4">
-                <img src="https://drive.google.com/uc?export=view&id=1mK6bgO0GbkbWZleoAgkYDh7ZSZI01GWs" alt="Company 5">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Pixar_logo.svg/320px-Pixar_logo.svg.png" alt="Pixar">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/Prime_Focus_logo.svg/320px-Prime_Focus_logo.svg.png" alt="Prime Focus">
+                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/3/37/Red_Chillies_Entertainment_Logo.svg/320px-Red_Chillies_Entertainment_Logo.svg.png" alt="Red Chillies VFX">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/Framestore_logo.svg/320px-Framestore_logo.svg.png" alt="Framestore">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Technicolor_logo.svg/320px-Technicolor_logo.svg.png" alt="Technicolor">
             </div>
             
             <h2 style="margin-top: 40px;">Our Track Record Speaks for Itself</h2>
@@ -867,10 +867,10 @@
         <div class="container">
             <h2 class="section-title">World-Class Infrastructure & Facilities</h2>
             <div class="infrastructure-gallery">
-                <img src="https://drive.google.com/uc?export=view&id=1HuJFSmG1CsG9vOrFCdk1wLYFAlu5os59" alt="MAAC Computer Lab">
-                <img src="https://drive.google.com/uc?export=view&id=1lcTd91PzHXxksMqt0mTnB9CE6zlSAHLZ" alt="MAAC Classroom">
-                <img src="https://drive.google.com/uc?export=view&id=1iGtf_sF1Rusral7Etpe3-BOJrb2sAInW" alt="MAAC Students Working">
-                <img src="https://drive.google.com/uc?export=view&id=116AxUPi_DEKNMp8fZbbsiBHZsbAlRfPh" alt="MAAC Training Session">
+                <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?w=400&h=250&fit=crop" alt="Computer Lab">
+                <img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?w=400&h=250&fit=crop" alt="Classroom">
+                <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=400&h=250&fit=crop" alt="Students Working">
+                <img src="https://images.unsplash.com/photo-1531482615713-2afd69097998?w=400&h=250&fit=crop" alt="Training Session">
             </div>
         </div>
     </section>
@@ -882,7 +882,7 @@
             <div class="testimonials">
                 <div class="testimonial">
                     <div class="testimonial-header">
-                        <img src="https://drive.google.com/uc?export=view&id=1ESjp2E-9X7U1X1kBQr_TkTfbSkWj2RZY" alt="Rahul Verma" class="testimonial-avatar">
+                        <img src="https://i.pravatar.cc/150?img=12" alt="Rahul Verma" class="testimonial-avatar">
                         <div>
                             <div class="stars">⭐⭐⭐⭐⭐</div>
                         </div>
@@ -892,7 +892,7 @@
                 </div>
                 <div class="testimonial">
                     <div class="testimonial-header">
-                        <img src="https://drive.google.com/uc?export=view&id=1iAY-uUQZVi8Sod5Wf7wEK6inVtWUNCg5" alt="Priya Sharma" class="testimonial-avatar">
+                        <img src="https://i.pravatar.cc/150?img=45" alt="Priya Sharma" class="testimonial-avatar">
                         <div>
                             <div class="stars">⭐⭐⭐⭐⭐</div>
                         </div>
@@ -902,7 +902,7 @@
                 </div>
                 <div class="testimonial">
                     <div class="testimonial-header">
-                        <img src="https://drive.google.com/uc?export=view&id=1uUU1BxtCpAuIgDG36_56dxaaIQTUnpp4" alt="Ajay Kumar" class="testimonial-avatar">
+                        <img src="https://i.pravatar.cc/150?img=33" alt="Ajay Kumar" class="testimonial-avatar">
                         <div>
                             <div class="stars">⭐⭐⭐⭐⭐</div>
                         </div>
