Fixed with reliable Unsplash and Pravatar images

--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
                     <a href="#form" class="cta-button">Book Your FREE Career Counselling Session →</a>
                 </div>
                 <div class="hero-image">
-                    <img src="https://bfldeliveryprodeu4.blob.core.windows.net/results/3e/8314954399d8f8/4399d8f8a6b24c4fb1a5b229e4bf3452/sample.jpeg" alt="Student working on 3D animation">
+                    <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?w=600&h=400&fit=crop" alt="Student working on animation">
                 </div>
             </div>
         </div>
@@ -869,10 +869,10 @@
         <div class="container">
             <h2 class="section-title">World-Class Infrastructure & Facilities</h2>
             <div class="infrastructure-gallery">
-                <img src="https://bfldeliveryscus.blob.core.windows.net/results/1f/84456885ab6f55/85ab6f5579e44549a17d1aca99bc0700/sample.jpeg" alt="MAAC Computer Lab">
-                <img src="https://bfldeliveryprodeu4.blob.core.windows.net/results/88/851000a7900a38/a7900a38c6c5441292258038a4916d33/sample.jpeg" alt="MAAC Classroom">
-                <img src="https://bfldeliveryscus.blob.core.windows.net/results/83/85820056da570a/56da570a8ea84e8dac1a021689ec0866/sample.jpeg" alt="MAAC Students Working">
-                <img src="https://bfldeliveryscus.blob.core.windows.net/results/1f/84456885ab6f55/85ab6f5579e44549a17d1aca99bc0700/sample.jpeg" alt="MAAC Training Session">
+                <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?w=400&h=250&fit=crop" alt="Computer Lab">
+                <img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?w=400&h=250&fit=crop" alt="Classroom">
+                <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=400&h=250&fit=crop" alt="Students Working">
+                <img src="https://images.unsplash.com/photo-1531482615713-2afd69097998?w=400&h=250&fit=crop" alt="Training Session">
             </div>
         </div>
     </section>
@@ -884,7 +884,7 @@
             <div class="testimonials">
                 <div class="testimonial">
                     <div class="testimonial-header">
-                        <img src="https://bfldeliverysc.blob.core.windows.net/results/f9/8645486bc896ac/6bc896ac96aa46528a3412a7bb4e5e5b/sample.jpeg" alt="Rahul Verma" class="testimonial-avatar">
+                        <img src="https://i.pravatar.cc/150?img=12" alt="Rahul Verma" class="testimonial-avatar">
                         <div>
                             <div class="stars">⭐⭐⭐⭐⭐</div>
                         </div>
@@ -894,7 +894,7 @@
                 </div>
                 <div class="testimonial">
                     <div class="testimonial-header">
-                        <img src="https://bfldeliverysc.blob.core.windows.net/results/fe/872001dd0cf800/dd0cf800bf924ab58c7586e16ff02e27/sample.jpeg" alt="Priya Sharma" class="testimonial-avatar">
+                        <img src="https://i.pravatar.cc/150?img=45" alt="Priya Sharma" class="testimonial-avatar">
                         <div>
                             <div class="stars">⭐⭐⭐⭐⭐</div>
                         </div>
@@ -904,7 +904,7 @@
                 </div>
                 <div class="testimonial">
                     <div class="testimonial-header">
-                        <img src="https://bfldeliveryscus.blob.core.windows.net/results/b2/8814947a0e66d8/7a0e66d884f2493f9c3e54b2dd00c887/sample.jpeg" alt="Ajay Kumar" class="testimonial-avatar">
+                        <img src="https://i.pravatar.cc/150?img=33" alt="Ajay Kumar" class="testimonial-avatar">
                         <div>
                             <div class="stars">⭐⭐⭐⭐⭐</div>
                         </div>
